added wall demo

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
     <head>
         <title>Path Finding Visualizer</title>
+        <script src="queue.js"></script>
         <script src="dijkstra.js"></script>
         <script src="code.js"></script>
     </head>
     <body>
         <canvas id="cnvs" width="700" height="700" style="border:1px solid #000000;">
         </canvas>
+        <div></div>
+        <button id="btn">Clear</button>
+        <button id="start">Start Point</button>
+        <button id="end">End Point</button>
+        <button id="wall">Create Wall</button>
     </body>
 </html>
