--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Path Finding Visualizer</title>
         <script src="queue.js"></script>
+        <script src="point.js"></script>
         <script src="wall.js"></script>
         <script src="draw.js"></script>
         <script src="dijkstra.js"></script>
