git rid of start/end buttons, add point moving, and adding wall without buttons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         </canvas>
         <div></div>
         <button id="btn">Clear</button>
-        <button id="start">Start Point</button>
-        <button id="end">End Point</button>
-        <button id="wall">Create Wall</button>
+        <button id="path">Find Path</button>
     </body>
 </html>
