added animation for blocks

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <title>Path Finding Visualizer</title>
-        <script src="queue.js"></script>
-        <script src="point.js"></script>
-        <script src="draw.js"></script>
-        <script src="dijkstra.js"></script>
-        <script src="code.js"></script>
+        <script src="./js/queue.js"></script>
+        <script src="./js/point.js"></script>
+        <script src="./js/draw.js"></script>
+        <script src="./js/dijkstra.js"></script>
+        <script src="./js/code.js"></script>
         <style>
             #canvas-wrap { 
                 position:relative 
