--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="./js/point.js"></script>
         <script src="./js/draw.js"></script>
         <script src="./js/dijkstra.js"></script>
-        <script src="./js/code.js"></script>
+        <script src="./js/main.js"></script>
         <style>
             #canvas-wrap { 
                 position:relative 
