--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Path Finding Visualizer</title>
         <script src="./js/attributes.js"></script>
         <script src="./js/queue.js"></script>
@@ -9,32 +10,6 @@
         <script src="./js/draw.js"></script>
         <script src="./js/dijkstra.js"></script>
         <script src="./js/main.js"></script>
-        <style>
-            #canvas-wrap { 
-                position:relative 
-            } 
-            #tutorial { 
-                position:absolute; 
-                top:20px; 
-                left:500px; 
-                background-color: lightgrey;
-                width: 300px;
-                border: 15px solid rgb(15, 240, 240);
-                padding: 50px;
-                margin: 20px;
-            }
-            #canvas-wrap { 
-                position:relative; 
-                width:800px; 
-                height:600px 
-            }
-            #canvas-wrap canvas { 
-                position:absolute; 
-                top:0; 
-                left:0; 
-                z-index:0 
-            }
-        </style>
     </head>
     <body>
         <button type="button" class="btn btn-dark" id="btn">Clear</button>
