some design changes

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <script src="./js/main.js"></script>
     </head>
     <body>
-        <button type="button" class="btn btn-dark" id="btn">Clear</button>
+        <button type="button" class="btn btn-dark" id="clear">Clear</button>
         <button type="button" class="btn btn-dark" id="path">Find Path</button>
         <div id="canvas-wrap">
-            <canvas id="cnvs" width="1400" height="700" style="border:1px solid #000000;"></canvas>
-            <div id="tutorial">This is a website that vizualizes a path finding algorithm.
-                Yellow is the start point and Green is the end point of path. You can move end points 
-                with just clicking on point and moving around. You can also add wall with the same thing above.
+            <canvas id="cnvs" width="1400" height="700"></canvas>
+            <div id="tutorial">This is a website that vizualizes a path finding algorithm Dijkstra.</br>
+                Yellow is the start point and Green is the end point of path.</br> You can move end points 
+                by just clicking on point and moving around.</br>You can also add wall with the same technique above.<br>
                 <button type="button" class="btn btn-dark" id="got">Got it!</button>
             </div>
         </div>
